--- a/css/main.css
+++ b/css/main.css
@@ -173,12 +173,12 @@
 }
 .btn{
     padding: 8px 20px;
-    margin: 7px 3px;
-    border:  2px solid white;
+    margin: 9px 5px;
+    border:  2px solid rgb(0, 0, 0);
     border-radius: 10px;
-    font-size: 16px;
+    font-size: 22px;
     background: none;
-    color: white;
+    color: rgb(0, 0, 0);
     cursor: pointer;
     text-decoration: none;
     font-family: Lobster;
