--- a/css/login.css
+++ b/css/login.css
@@ -51,6 +51,7 @@ input{
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    padding-left: 190px;
 }
 .logo img{
     width: 500%;
